# qt-tictactoe

./: CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix
include/: boardstate.h  gamemaster.h  gamestate.h  player.h
qml/: Board.qml  Main.qml  Menu.qml
src/: boardstate.cpp  gamemaster.cpp  gamestate.cpp  main.cpp  player.cpp
